feat: Implement core VAE and UNet training logic with critical bug fixes
This commit introduces the core training components for the document anonymization system, addressing several critical bugs found in the reference implementations.

Key changes include:

*   **VAE Training Fixes**:
    *   **KL Divergence Loss**: The KL divergence term was completely missing from the VAE loss function. This has been correctly implemented and weighted, ensuring proper latent space structure and stable training.
    *   **Learning Rates**: Learning rates for both VAE (increased from `5e-6` to `5e-4`) and UNet (increased from `1e-5` to `1e-4`) have been corrected to enable proper convergence and training efficiency.
    *   **Batch Sizes**: Batch sizes have been increased for stability (VAE from `2` to `16`, UNet from `4` to `8`).
    *   **Perceptual Loss**: A VGG-based perceptual loss has been added to the VAE trainer to improve text detail preservation in reconstructions.

*   **UNet Training Fixes**:
    *   **Architecture**: The implementation now correctly uses the Stable Diffusion 2.0 inpainting model, which has the required 9-channel input architecture.
    *   **Text Conditioning**: TrOCR text conditioning has been integrated for proper text guidance.
    *   **Learning Rates & Batch Sizes**: As mentioned above, these have been corrected for stable training.

*   **General Improvements**:
    *   **Error Handling**: Comprehensive error handling, input validation, and bounds checking have been implemented throughout all modules to ensure production-ready reliability.
    *   **Memory Management**: Proper GPU cleanup and memory limit enforcement are now in place to prevent OOM crashes.
    *   **Type Safety**: Full Pydantic models are used for all data structures, ensuring type safety and robust validation.
    *   **Configuration**: New configuration files (`vae_config.yaml`, `unet_config.yaml`, `engine_config.yaml`) have been added with corrected hyperparameters and safet

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "click>=8.1.8",
-    "diffusers>=0.32.2",
+    "diffusers>=0.32.2", 
     "pdf2image>=1.17.0",
     "presidio-analyzer>=2.2.358",
     "presidio-anonymizer>=2.2.358",
@@ -17,9 +17,17 @@ dependencies = [
     "pymupdf>=1.25.4",
     "python-decouple>=3.8",
     "spacy>=3.8.4",
-    "tdqm>=0.0.1",
+    "tqdm>=4.66.0",
     "torch>=2.6.0",
+    "torchvision>=0.19.0",
     "transformers>=4.49.0",
+    "accelerate>=1.2.0",
+    "safetensors>=0.4.0",
+    "pydantic>=2.10.0",
+    "pyyaml>=6.0.0",
+    "pillow>=10.0.0",
+    "opencv-python>=4.8.0",
+    "numpy>=1.24.0",
 ]
 
 [dependency-groups]
@@ -28,5 +36,35 @@ dev = [
     "mypy>=1.15.0",
     "pytest>=8.3.5",
     "pytest-cov>=6.0.0",
+    "pytest-mock>=3.12.0",
+    "pytest-xdist>=3.6.0",
     "ruff>=0.11.0",
+]
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+python_files = ["test_*.py"]
+python_classes = ["Test*"]
+python_functions = ["test_*"]
+addopts = [
+    "-v",
+    "--tb=short",
+    "--strict-markers",
+    "--disable-warnings",
+    "--cov=src/anonymizer",
+    "--cov-report=term-missing",
+    "--cov-report=html:htmlcov",
+]
+markers = [
+    "unit: Unit tests",
+    "integration: Integration tests", 
+    "gpu: Tests requiring GPU",
+    "slow: Slow tests",
+]
+
+[tool.coverage.run]
+source = ["src/anonymizer"]
+omit = [
+    "*/tests/*",
+    "*/test_*",
 ]
