--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,8 @@ lerna-debug.log*
 
 src/reference_code/
 
+**/__pycache__/**
+
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
