--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "click>=8.1.8",
-    "diffusers>=0.32.2", 
+    "diffusers>=0.32.2",
     "pdf2image>=1.17.0",
     "presidio-analyzer>=2.2.358",
     "presidio-anonymizer>=2.2.358",
@@ -28,6 +28,7 @@ dependencies = [
     "pillow>=10.0.0",
     "opencv-python>=4.8.0",
     "numpy>=1.24.0",
+    "pydantic-settings>=2.10.1",
 ]
 
 [dependency-groups]
