feat: added r2 upload

--- a/.env.example
+++ b/.env.example
@@ -86,11 +86,18 @@ PREPROCESSING_PADDING_MODE=reflect
 PREPROCESSING_INTERPOLATION=lanczos
 
 # Cloudflare R2 Storage Configuration
-R2_ENDPOINT_URL=https://your-account.r2.cloudflarestorage.com
-R2_ACCESS_KEY_ID=your-access-key-id
-R2_SECRET_ACCESS_KEY=your-secret-access-key
-R2_BUCKET_NAME=your-bucket-name
-R2_REGION=auto
+# Account API Token (with R2:Edit permissions for bucket management)
+CLOUDFLARE_ACCOUNT_API_TOKEN=your_cloudflare_api_token_here
+CLOUDFLARE_ACCOUNT_ID=your_cloudflare_account_id_here
+
+# R2 Storage Credentials
+CLOUDFLARE_R2_ACCESS_KEY_ID=your_r2_access_key_id_here
+CLOUDFLARE_R2_SECRET_ACCESS_KEY=your_r2_secret_access_key_here
+CLOUDFLARE_R2_ENDPOINT_URL=https://your_account_id.r2.cloudflarestorage.com
+CLOUDFLARE_R2_BUCKET_NAME=document-anonymizer-data
+
+# Optional: Custom R2 Token (if created via API)
+CLOUDFLARE_R2_TOKEN=your_custom_r2_token_here
 
 # Metrics Configuration
 METRICS_ENABLE_METRICS=true
