--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ dependencies = [
     "opencv-python>=4.8.0",
     "numpy>=1.24.0",
     "pydantic-settings>=2.10.1",
+    "boto3>=1.39.4",
 ]
 
 [dependency-groups]
