docs: add cloud training docs and cloud training infra
- document installation & usage for local training
- document usage for Modal.com cloud training
- add Features list with privacy-first & production tags
- add `modal>=0.65.0` and `wandb>=0.18.0` to runtime deps
- create cloud infra under `src/anonymizer/cloud/`
 - add Modal config classes (`ModalConfig`, `ModalTrainingConfig`)
 - add Modal app & training functions (`train_vae`, `train_unet`) wrapped for GPU execution
 - add W&B logger (`WandbLogger`) and metrics helpers
- extend VAETrainer with optional W&B logger parameter
 - hook logging via `wandb_logger.watch` during training

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = [
     {name = "Piotr Gryko",email = "piotr.gryko@gmail.com"}
 ]
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = ">=3.12,<3.14"
 dependencies = [
     "click>=8.1.8",
     "diffusers>=0.32.2",
@@ -30,6 +30,8 @@ dependencies = [
     "numpy>=1.24.0",
     "pydantic-settings>=2.10.1",
     "boto3>=1.39.4",
+    "modal>=0.65.0",
+    "wandb>=0.18.0",
 ]
 
 [dependency-groups]
