feat(ocr): add OCR functionality with multiple engines and fallbacks
- Add support for PaddleOCR, EasyOCR, TrOCR, and Tesseract engines
- Implement OCRConfig for engine configuration and processing options
- Add OCRProcessor class with fallback strategies and text filtering
- Initialize OCR processor in InferenceEngine for text detection
- Update dependencies in pyproject.toml to include OCR libraries
- Add comprehensive OCR models and data structures

Key features:
- Multiple OCR engines with automatic fallback
- Text filtering and preprocessing options
- Confidence-based text detection
- Integration with document anonymization pipeline

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,10 @@ dependencies = [
     "opencv-python>=4.8.0",
     "numpy>=1.24.0",
     "pydantic-settings>=2.10.1",
+    "paddlepaddle>=2.6.0",
+    "paddleocr>=2.7.3",
+    "easyocr>=1.7.0",
+    "pytesseract>=0.3.10",
     "boto3>=1.39.4",
     "modal>=0.65.0",
     "wandb>=0.18.0",
