--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,9 @@ dependencies = [
     "paddleocr>=2.7.3",
     "easyocr>=1.7.0",
     "pytesseract>=0.3.10",
+    "requests>=2.31.0",
+    "tqdm>=4.66.0",
+    "huggingface-hub>=0.20.0",
     "boto3>=1.39.4",
     "modal>=0.65.0",
     "wandb>=0.18.0",
@@ -48,6 +51,7 @@ dev = [
     "pytest-xdist>=3.6.0",
     "ruff>=0.11.0",
     "psutil>=6.0.0",
+    "pynvml>=11.4.1",
 ]
 
 [tool.pytest.ini_options]
