--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,8 @@ dependencies = [
     "boto3>=1.39.4",
     "modal>=0.65.0",
     "wandb>=0.18.0",
+    "fonttools>=4.38.0",
+    "freetype-py>=2.3.0",
 ]
 
 [dependency-groups]
