chore: pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -108,6 +108,15 @@ warn_unused_ignores = true
 warn_no_return = true
 warn_unreachable = true
 strict_equality = true
+exclude = [
+    "\\.venv/",
+    "build/",
+    "dist/",
+    "\\.eggs/",
+    "\\.git/",
+    "\\.mypy_cache/",
+    "\\.tox/",
+]
 
 [tool.black]
 line-length = 100
